@@ -19,3 +19,42 @@ record = {
   "gctime_sys"=> 0.00,
   "gctime_real" => 0.69,
 }
+
+## Support options
+
+### java 1.8 G1GC
+```
+% java -version
+java version "1.8.0_40"
+Java(TM) SE Runtime Environment (build 1.8.0_40-b25)
+Java HotSpot(TM) 64-Bit Server VM (build 25.40-b25, mixed mode)
+```
+
+```
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
+-XX:+PrintTenuringDistribution
+-XX:+PrintGCApplicationStoppedTime
+-XX:+DisableExplicitGC
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+UseG1GC
+```
+
+### java 1.7 CMS
+```
+% java -version
+java version "1.7.0_65"
+Java(TM) SE Runtime Environment (build 1.7.0_65-b17)
+Java HotSpot(TM) 64-Bit Server VM (build 24.65-b04, mixed mode)
+```
+
+```
+-XX:+UseConcMarkSweepGC
+-XX:+CMSIncrementalMode
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+UseGCLogFileRotation
+-XX:NumberOfGCLogFiles=5
+-XX:GCLogFileSize=10M
+```
